# quantitative-trading

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  notes.txt  pyproject.toml  requirements.txt
config/: data_sources.yaml  schedule.yaml  strategy.yaml
scripts/: refresh_fundamentals.py
src/qt/: __init__.py
src/qt/backtest/: engine.py  metrics.py  report.py
src/qt/common/: calendar.py  config.py
src/qt/data/: quality_check.py
src/qt/data/ingest/: universe_builder.py
src/qt/data/providers/: akshare_provider.py  baostock_provider.py  gm_provider.py  mock_history.py  mock_provider.py  provider_factory.py
src/qt/data/storage/: repository.py  schema.py  sqlite_client.py
src/qt/execution/: broker_base.py  goldminer_broker.py  order_manager.py  paper_broker.py  trading_engine.py
src/qt/factors/: __init__.py  combiner.py  constants.py  decay_detector.py  expectation.py  lgbm_model.py  ml_composer.py  normalize.py  quality.py  value.py
src/qt/monitoring/: __init__.py  audit.py  dashboard_app.py  notifier.py
src/qt/pipelines/: backfill_data.py  init_db.py  run_backtest.py  run_daily_checks.py  run_monthly_rebalance.py  run_optimization.py  run_scheduler.py
src/qt/reports/: __init__.py  monthly_pdf.py
src/qt/strategy/: position_sizer.py  rebalancer.py  risk_controls.py  risk_manager.py  rules.py  selector.py
tests/: test_backtest_engine.py  test_dashboard_metrics.py  test_decay_detector.py  test_factor_calculation.py  test_integration.py  test_ml_composer.py  test_monthly_pdf.py  test_provider_akshare_mapping.py  test_rebalance_logic.py  test_repository_price_storage.py  test_risk_controls.py  test_scheduler_runner.py  test_universe_filters.py
